# cite-or-abstain

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
coa/: __init__.py  adjudicate.py  backends.py  categorizer.py  cli.py  corpus.py  labeling.py  report_html.py  scorer.py  semantic.py  stats.py  testing.py  types.py  validation.py  verifier.py
coa/integrations/: __init__.py  deepeval.py
coa/llm/: __init__.py  anthropic.py  base.py  openai.py
coa/prompts/: categorize.txt  verify_alignment.txt
docs/: BENCHMARK.md  FINDINGS.md  METHODOLOGY.md  RELEASING.md  VALIDATION.md
examples/: basic.py  cases.json  demo.ipynb  report.json  synthetic_corpus.txt  synthetic_validation_set.json  validation_prompts.json
examples/corpus/: corpus.txt  manifest.json
scripts/: benchmark.py  build_validation_set.py  validate.sh
tests/: conftest.py  test_adjudicate.py  test_backends.py  test_categorizer_robustness.py  test_corpus.py  test_determinism.py  test_golden_report.py  test_integrations.py  test_labeling.py  test_lazy_and_unicode.py  test_report_html.py  test_runner.py  test_scorer.py  test_semantic.py  test_stats.py  test_types.py  test_validation.py  test_verifier_local.py  test_verifier_verdicts.py
tests/golden/: report.json
