[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cite-or-abstain"
version = "0.8.0"
description = "Evaluation harness for cite-or-abstain compliance in clinical LLM outputs."
readme = "README.md"
authors = [{ name = "Carl Luis Pöhl", email = "clpoehl@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["clinical-ai", "llm-evaluation", "safety", "cite-or-abstain", "medical-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core is SDK-free: the library and its deterministic tiers need no vendor SDK, so an
    # on-prem / library-only deployment stays light. Install a judge backend via an extra.
    "pydantic>=2.7",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40",  # AnthropicBackend judge
]
openai = [
    "openai>=1.50",  # OpenAIBackend judge; also any OpenAI-compatible on-prem server (base_url)
]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
]
fuzzy = [
    "rapidfuzz>=3.0",  # higher-recall passage matching; stdlib difflib is the default fallback
]
deepeval = [
    "deepeval>=1.0",  # run the rubric as a DeepEval metric (coa.integrations.deepeval)
]
dev = [
    "anthropic>=0.40",  # both bundled backends are imported by the test suite
    "openai>=1.50",
    "pytest>=8.0",
    "pytest-mock>=3.10",
    "ruff>=0.15,<0.16",  # pinned minor so CI lint matches local exactly
]

[project.scripts]
coa = "coa.cli:app"

[project.urls]
Homepage = "https://github.com/cl-poehl/cite-or-abstain"
Documentation = "https://github.com/cl-poehl/cite-or-abstain/tree/main/docs"
Source = "https://github.com/cl-poehl/cite-or-abstain"
Issues = "https://github.com/cl-poehl/cite-or-abstain/issues"

[tool.hatch.build.targets.wheel]
packages = ["coa"]
# Non-Python package data (prompt templates, example corpora) ships automatically
# because it lives under the coa/ package and is not VCS-ignored. It is read at
# runtime via importlib.resources / Path(__file__).parent, so it must be package
# data — not shared-data (which would install it outside the importable package).

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "B008",  # typer defines options as function-call defaults (typer.Option(...)) by design
    "UP042",  # keep `class X(str, Enum)`; StrEnum would change str(member) formatting
]
